2008-12-25  Chris Toshok  <toshok@ximian.com>

	* CompareContext.cs: split out the comparison of base types into a
	separate method.  Also, if we're adding a missing type, add a tree
	node for the base type.

2008-12-19  Jb Evain  <jbevain@novell.com>

	* InfoManager.cs: add SL2SDK assemblies: System.Xml.Linq,
	System.Windows.Controls and System.Windows.Controls.Data.

2008-12-17  Jb Evain  <jbevain@novell.com>

	* CecilMetadata.cs: in the process of fixing our interface story.
	Always include all the interfaces for a type, by walking down its
	hierarchy. mono-api-info does the same as well now. This make it easier
	to compare interface implementation.

2008-12-17  Jb Evain  <jbevain@novell.com>

	* MainWindow.cs
	* InfoManager.cs
	* CompareContext.cs:
		Avoid defining our own delegate when we can use Func and Action.

2008-12-17  Jb Evain  <jbevain@novell.com>

	* MainWindow.cs
	* Metadata.cs
	* Comparison.cs
	* CompareContext.cs:
		PascalCase public fields in Comparison.

2008-12-17  Jb Evain  <jbevain@novell.com>

	* CecilMetadata.cs: treat Finalizers as an implementation detail
	and ignore it for the comparison.

2008-12-16  Jb Evain  <jbevain@novell.com>

	* CecilMetadata.cs: fix the comparison of the definition
	of System.Delegate and System.MulticastDelegate.

2008-12-05  Jb Evain  <jbevain@novell.com>

	* CecilMetadata.cs
	* CompareContext.cs
	* Comparison.cs
	* Main.cs
	* MasterMetadata.cs
	* Masterinfo.cs
	* Metadata.cs:
		add license and copyright information.

2008-12-05  Jb Evain  <jbevain@novell.com>

	* CecilMetadata.cs
	* CompareContext.cs
	* Comparison.cs
	* MasterMetadata.cs
	* Metadata.cs:
		cleanup usings.

2008-12-04  Jb Evain  <jbevain@novell.com>

	* CompareContext.cs
	* MainWindow.cs: move the Gtk dependant code from the CompareContext
	to the MainWindow, so that CompareContext can be used in a non Gtk
	application.

2008-12-04  Jb Evain  <jbevain@novell.com>

	* AssemblyResolver.cs: update.

2008-12-02  Chris Toshok  <toshok@ximian.com>
